@@ -10,7 +10,7 @@ generated by GNU Autoconf 2.62.  Invocation command line was
 ## Platform. ##
 ## --------- ##
 
-hostname = dekisugi
+hostname = sewashi
 uname -m = i686
 uname -r = 2.6.22-14-generic
 uname -s = Linux
@@ -29,13 +29,13 @@ uname -v = #1 SMP Tue Feb 12 07:42:25 UTC 2008
 
 PATH: /home/taro/bin
 PATH: /home/taro/bin
-PATH: /home/taro/bin
 PATH: /usr/local/sbin
 PATH: /usr/local/bin
 PATH: /usr/sbin
 PATH: /usr/bin
 PATH: /sbin
 PATH: /bin
+PATH: /usr/bin/X11
 PATH: /usr/games
 
 
@@ -56,10 +56,8 @@ configure:2143: result: yes
 configure:2168: checking for a thread-safe mkdir -p
 configure:2207: result: /bin/mkdir -p
 configure:2220: checking for gawk
-configure:2250: result: no
-configure:2220: checking for mawk
-configure:2236: found /usr/bin/mawk
-configure:2247: result: mawk
+configure:2236: found /usr/bin/gawk
+configure:2247: result: gawk
 configure:2258: checking whether make sets $(MAKE)
 configure:2280: result: yes
 configure:2511: checking for ranlib
@@ -237,7 +235,7 @@ generated by GNU Autoconf 2.62.  Invocation command line was
   CONFIG_COMMANDS = 
   $ ./config.status 
 
-on dekisugi
+on sewashi
 
 config.status:803: creating Makefile
 config.status:803: creating src/Makefile
@@ -296,7 +294,7 @@ ac_cv_path_EGREP='/bin/grep -E'
 ac_cv_path_GREP=/bin/grep
 ac_cv_path_install='/usr/bin/install -c'
 ac_cv_path_mkdir=/bin/mkdir
-ac_cv_prog_AWK=mawk
+ac_cv_prog_AWK=gawk
 ac_cv_prog_CPP='gcc -E'
 ac_cv_prog_ac_ct_CC=gcc
 ac_cv_prog_ac_ct_RANLIB=ranlib
@@ -319,7 +317,7 @@ AMTAR='${SHELL} /home/taro/mosh/gc-7.1alpha3/libatomic_ops/missing --run tar'
 AUTOCONF='${SHELL} /home/taro/mosh/gc-7.1alpha3/libatomic_ops/missing --run autoconf'
 AUTOHEADER='${SHELL} /home/taro/mosh/gc-7.1alpha3/libatomic_ops/missing --run autoheader'
 AUTOMAKE='${SHELL} /home/taro/mosh/gc-7.1alpha3/libatomic_ops/missing --run automake-1.10'
-AWK='mawk'
+AWK='gawk'
 CC='gcc'
 CCAS='gcc'
 CCASDEPMODE='depmode=gcc3'
