@@ -1,3 +1,10 @@
+2008-05-21  higepon  <higepon@users.sourceforge.jp>
+
+        * macro.scm: Removed macro.scm.
+
+        * vm.scm: Added pre-compiled macro support.
+                  Only for top level macro defined at library.scm.
+
 2008-05-19  higepon  <higepon@users.sourceforge.jp>
 
         * 0.0.3 released.
